--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
               status: "",
               create: "",
               log: [
-                { date: "2022.10.04", text: "카드 모서리 라운드 처리" },
+                //{ date: "", text: "" },
               ],
             },
             
