--- a/guide-popup.html
+++ b/guide-popup.html
@@ -12,13 +12,11 @@
     <!-- //favicon -->
 
     <!-- style -->
-    <link type="text/css" rel="stylesheet" href="./dist/assets/lib/SBGrid/css/SBGrid.css" />
-    <link type="text/css" rel="stylesheet" href="./dist/assets/lib/SBGrid/css/SBGrid_Default.css" />
     <link type="text/css" rel="stylesheet" href="./dist/assets/lib/swiper/swiper.min.css" />
     <link type="text/css" rel="stylesheet" href="./dist/assets/lib/simplebar/simplebar.css" />
     <link type="text/css" rel="stylesheet" href="./dist/assets/lib/datetimepicker/bootstrap.min.css" />
     <link type="text/css" rel="stylesheet" href="./dist/assets/lib/datetimepicker/bootstrap-datetimepicker.min.css" />
-    <link type="text/css" rel="stylesheet" href="./dist/assets/css/common.css" />
+    <!-- <link type="text/css" rel="stylesheet" href="./dist/assets/css/common.css" /> -->
     <link type="text/css" rel="stylesheet" href="./dist/assets/css/ui-style.css" />
     <style>
       b {
@@ -520,9 +518,6 @@
     </div>
 
     <!-- script -->
-    <script type="text/javascript" src="./dist/assets/lib/SBGrid/SBGrid_custom-config.js"></script>
-    <script type="text/javascript" src="./dist/assets/lib/SBGrid/SBGrid_Lib.js"></script>
-    <script type="text/javascript" src="./dist/assets/lib/SBGrid/SBGrid_min.js"></script>
     <script type="text/javascript" src="./dist/assets/lib/jquery/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="./dist/assets/lib/swiper/swiper.min.js"></script>
     <script type="text/javascript" src="./dist/assets/lib/simplebar/simplebar.min.js"></script>
