--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <div class="index-gnb">
         <div class="index-links">
           <div class="index-links__inner">
-            <a href="./guide-popup.html" target="_blank">레이어 팝업 가이드</a>
+            <!-- <a href="./guide-popup.html" target="_blank">레이어 팝업 가이드</a> -->
             <a href="./guide-component.html" target="_blank">컴포넌트 가이드</a>
             <a href="./guide-script.html" target="_blank">스크립트 가이드</a>
           </div>
