--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <!-- script -->
     <script
       type="text/javascript"
-      src="./dist/assets/lib/jquery/jquery-3.6.0.min.js"
+      src="./dist/assets/lib/jquery/jquery-1.10.2.min.js"
     ></script>
     <script>
       var title = "NIA 한국지능정보사회진흥원";
@@ -351,7 +351,7 @@
           ],
         },
         {
-          depth1: "진단대상자",
+          depth1: "진단대상자 - 현주",
           data: [
             {
               id: "DI-U1100",
@@ -456,7 +456,7 @@
         },
         
         {
-          depth1: "총괄관리자",
+          depth1: "총괄관리자 - 선미",
           data: [
             {
               id: "DI-A1100",
