[ yellow ] 230113 로그인 작업 완료

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       }
 
       .index-status--end {
-        background-color: #00a6a0;
+        background-color: #203c7d;
       }
 
       .index-status--end2 {
@@ -303,8 +303,8 @@
               depth5: "",
               depth6: "",
               path: "/DI-C1000.html",
-              status: "",
-              create: "",
+              status: "end",
+              create: "2023.01.13",
               log: [
                 //{ date: "", text: "" }
               ],
