[ yellow ] 230113 공통 페이지 작업중

--- a/index.html
+++ b/index.html
@@ -296,13 +296,41 @@
           depth1: "공통",
           data: [
             {
-              id: "DI-C1000\nDI-C1001\nDI-C1002",
+              id: "DI-C1000\nDI-C1001",
               depth2: "로그인",
-              depth3: "초기회면, 알림창, 비밀번호 초기화",
+              depth3: "초기회면, 알림창",
               depth4: "",
               depth5: "",
               depth6: "",
               path: "/DI-C1000.html",
+              status: "end",
+              create: "2023.01.13",
+              log: [
+                //{ date: "", text: "" }
+              ],
+            },
+            {
+              id: "DI-C1002",
+              depth2: "로그인",
+              depth3: "비밀번호 초기화1",
+              depth4: "",
+              depth5: "",
+              depth6: "",
+              path: "/DI-C1002.html",
+              status: "end",
+              create: "2023.01.13",
+              log: [
+                //{ date: "", text: "" }
+              ],
+            },
+            {
+              id: "DI-C1003",
+              depth2: "로그인",
+              depth3: "비밀번호 초기화2",
+              depth4: "",
+              depth5: "",
+              depth6: "",
+              path: "/DI-C1003.html",
               status: "end",
               create: "2023.01.13",
               log: [
@@ -317,8 +345,8 @@
               depth5: "",
               depth6: "",
               path: "/DI-C1004.html",
-              status: "",
-              create: "",
+              status: "end",
+              create: "2023.01.13",
               log: [
                 //{ date: '2022.08.12', text: '오타 수정' }
               ],
