[ yellow ] 230116 진단대상자 작업중

--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
               depth5: "",
               depth6: "",
               path: "/DI-C1006.html",
-              status: "",
-              create: "",
+              status: "end",
+              create: "2023.01.13",
               log: [],
             },
             {
@@ -371,8 +371,8 @@
               depth5: "",
               depth6: "",
               path: "/DI-C1007.html",
-              status: "",
-              create: "",
+              status: "end",
+              create: "2023.01.16",
               log: [],
             },
             
@@ -389,8 +389,8 @@
               depth5: "",
               depth6: "",
               path: "/DI-U1100.html",
-              status: "",
-              create: "",
+              status: "end",
+              create: "2023.01.16",
               log: [
                 //{ date: "2022.11.10", text: "오타 수정" },
               ],
@@ -403,8 +403,8 @@
               depth5: "",
               depth6: "",
               path: "/DI-U1101.html",
-              status: "",
-              create: "",
+              status: "end",
+              create: "2023.01.16",
               log: [
                 //{ date: "2022.11.10", text: "오타 수정" },
               ],
