[ yellow ] 230117 진단대상자 초기화면 작업 완료

--- a/guide-component.html
+++ b/guide-component.html
@@ -129,6 +129,16 @@
       <div class="test-section-sub">
         <h3 class="test-title">Default</h3>
         <button type="button" class="ui-button ui-button__bg--blue">button</button>
+        <button type="button" class="ui-button ui-button__border--gray" data-bs-dismiss="modal">button</button>
+
+        <button type="button" class="ui-button ui-button__bg--blue">확인</button>
+        <button type="button" class="ui-button ui-button__bg--gray" data-bs-dismiss="modal">닫기</button>
+      </div>
+
+      <div class="test-section-sub">
+        <h3 class="test-title">Disabled</h3>
+        <button type="button" class="ui-button ui-button__bg--blue ui-button__disabled" aria-disabled="true">button</button>
+        
       </div>
 
 
