--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
               depth5: "",
               depth6: "",
               path: "/DI-U1200.html",
-              status: "",
-              create: "",
+              status: "end",
+              create: "2023.01.17",
               log: [
                 //{ date: "2022.11.10", text: "오타 수정" },
               ],
@@ -431,8 +431,8 @@
               depth5: "",
               depth6: "",
               path: "/DI-U1201.html",
-              status: "",
-              create: "",
+              status: "end",
+              create: "2023.01.17",
               log: [
                 //{ date: "2022.11.10", text: "오타 수정" },
               ],
@@ -446,7 +446,7 @@
               depth6: "",
               path: "/DI-U1203.html",
               status: "",
-              create: "",
+              create: "2023.01.17",
               log: [
                 //{ date: "2022.11.10", text: "오타 수정" },
               ],
