[ yellow ] 230118 진단대상자 작업 완료

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
               depth5: "",
               depth6: "",
               path: "/DI-U1300.html",
-              status: "ing",
+              status: "end",
               create: "2023.01.17",
               log: [
                 //{ date: "2022.12.14",text: "만 나이 추가 및 표시 방식 변경"},
