--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       src="./dist/assets/lib/jquery/jquery-1.10.2.min.js"
     ></script>
     <script>
-      var title = "NIA 한국지능정보사회진흥원";
+      var title = "NIA 한국지능정보사회진흥원..";
       var tableData = [
         {
           depth1: "공통",
