[red] 230119 관리자 레이아웃 작업중

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <title>NIA 한국지능정보사회진흥원....</title>
+    <title>NIA 한국지능정보사회진흥원</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
