[ yellow ] 230119 진단 대상자 수정

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       src="./dist/assets/lib/jquery/jquery-1.10.2.min.js"
     ></script>
     <script>
-      var title = "NIA 한국지능정보사회진흥원..";
+      var title = "NIA 한국지능정보사회진흥원";
       var tableData = [
         {
           depth1: "공통",
@@ -473,7 +473,7 @@
               depth5: "",
               depth6: "",
               path: "/DI-U1300.html",
-              status: "end",
+              status: "ing",
               create: "2023.01.17",
               log: [
                 //{ date: "2022.12.14",text: "만 나이 추가 및 표시 방식 변경"},
