[ yellow ] 230119 기관관리자 home 작업

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
           ],
         },
         {
-          depth1: "진단대상자 - 현주",
+          depth1: "진단대상자",
           data: [
             {
               id: "DI-U1100",
@@ -484,7 +484,7 @@
         },
         
         {
-          depth1: "총괄관리자 - 선미",
+          depth1: "총괄관리자",
           data: [
             {
               id: "DI-A1100",
@@ -512,8 +512,22 @@
               depth5: "",
               depth6: "",
               path: "/DI-O1000.html",
-              status: "",
-              create: "",
+              status: "end",
+              create: "2023.01.19",
+              log: [
+                //{ date: "", text: "" },
+              ],
+            },
+            {
+              id: "DI-O1100",
+              depth2: "공지사항",
+              depth3: "초기화면",
+              depth4: "",
+              depth5: "",
+              depth6: "",
+              path: "/DI-O1100.html",
+              status: "ing",
+              create: "2023.01.19",
               log: [
                 //{ date: "", text: "" },
               ],
